# microservices-architecture

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
ApiGatewayService/: CMakeLists.txt
ApiGatewayService/Includes/Controllers/: ApiGatewayController.hpp
ApiGatewayService/Includes/Core/: BaseController.hpp
ApiGatewayService/Sources/: Main.cpp
ApiGatewayService/Sources/Controllers/: ApiGatewayController.cpp
AuthenticationService/: CMakeLists.txt
AuthenticationService/Includes/Controllers/: AuthenticationController.hpp
AuthenticationService/Includes/Core/: BaseController.hpp
AuthenticationService/Includes/Models/: UserModel.hpp
AuthenticationService/Includes/Repositories/: AuthenticationRepository.hpp
AuthenticationService/Sources/: Main.cpp
AuthenticationService/Sources/Controllers/: AuthenticationController.cpp
AuthenticationService/Sources/Core/: BaseController.cpp
AuthenticationService/Sources/Repositories/: AuthenticationRepository.cpp
InvestorService/: CMakeLists.txt
InvestorService/Includes/Controllers/: InvestorController.hpp
InvestorService/Includes/Core/: BaseController.hpp
InvestorService/Includes/Helpers/: Authorization.hpp
InvestorService/Includes/Models/: InvestorModel.hpp
InvestorService/Includes/Repositories/: InvestorRepository.hpp
InvestorService/Sources/: Main.cpp
InvestorService/Sources/Controllers/: InvestorController.cpp
InvestorService/Sources/Core/: BaseController.cpp
InvestorService/Sources/Repositories/: InvestorRepository.cpp
